[package]
name = "tdengine"
version = "0.1.2"
authors = [ "tickbh <tickdream125@hotmail.com>" ]

description = "game server for Rust"
repository = "https://github.com/tickbh/tdengine"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["gameserver", "server", "lua", "rust_lua"]

[features]

[dependencies]
libc = "^0.2"
time = "0.1.33"
rustc-serialize = "0.3.16"
net2   = { version = "0.2.23", default-features = false }
rust-crypto = "0.2.34"
tiny_http = { version = "0.5", default-features = false } 
td_rlua = "0.1.5"
td_revent = "0.1.5"
td_proto_rust = "0.1.2"
td_rredis = "0.1.0"
td_rthreadpool = "0.1.1"
sys-info = "0.4.1"
url = "1.1.0"
mysql = { version = "2.2.1", default-features = false }
#rusqlite = { git = "https://github.com/tickbh/rusqlite.git" }
ws = { branch="stable", git = "https://github.com/tickbh/ws-rs.git"}

[dependencies.rusqlite]
version = "0.11.0"
features = ["bundled"]

[dependencies.td_clua_ext]
version = "0.1.0"
path = "td_clua_ext"

#[dependencies.ws]
#version = "0.5.3"
#path = "../ws-rs"