[package]
name = "tunm"
version = "0.2.1"
authors = [ "tickbh <tickdream125@hotmail.com>" ]

description = "game server for Rust"
repository = "https://github.com/tickbh/tunm"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["gameserver", "server", "lua", "rust_lua"]

[features]

[dependencies]
libc = "^0.2"
time = "0.3.9"
chrono = "0.4.19"
rustc-serialize = "0.3.16"
net2   = { version = "0.2.23", default-features = false }
rust-crypto = "0.2.34"
tiny_http = { version = "0.11.0", default-features = false } 
td_rlua = "0.2.2"
td_revent = "0.3.2"
td_proto_rust = "0.1.2"
tunm_proto = "0.1.9"
td_rredis = "0.1.0"
td_rthreadpool = "0.1.1"
sys-info = "0.9.1"
url = "2.2.2"
psocket="0.1.5"
log="0.4.17"
env_logger = "0.9.0"
log4rs = "1.1.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
mysql = { version = "22.1.0", no-default-features = true }
ws = "0.9.2"
commander = "0.1"
websocket-simple="0.1.1"

luacjson="0.1.2"
luasocket="0.1.7"

[dependencies.rusqlite]
version = "0.27.0"
features = ["bundled"]


#[dependencies.websocket]
#version = "0.1.1"
#path = "websocket"
