[package]
name = "websocket"
version = "0.1.0"
authors = ["tickbh <tickdream125@hotmail.com>"]

[dependencies]
httparse = "1.1.2"
log = "0.3.6"
rand = "0.3.14"
sha1 = "0.2.0"
url = "1.2.0"
td_revent = "0.1.5"
time = "0.1.33"

[dependencies.libc]
optional = true
version = "0.2.15"

[dependencies.libz-sys]
optional = true
version = "1.0.5"

[dependencies.openssl]
optional = true
version = "0.7.14"

[dev-dependencies]
clap = "2.10.0"
env_logger = "0.3.4"
term = "0.4.4"
time = "0.1.35"

[features]
default = []
permessage-deflate = ["libz-sys", "libc"]
ssl = ["openssl"]
