[package]
name = "websocket-simple"
version = "0.1.1"
authors = ["tickbh <tickdream125@hotmail.com>"]

description = "simple websocket for Rust"
license = "MIT/Apache-2.0"
repository = "https://github.com/tickbh/tunm"

[dependencies]
byteorder = "1.2.1"
bytes = "0.4.6"
httparse = "1.2.4"
log = "0.4.1"
mio = "0.6.14"
mio-extras = "2.0"
rand = "0.7"
sha-1 = "0.8.0"
slab = "0.4"
url = "2.0.0"

[dependencies.libc]
optional = true
version = "0.2.15"

[dependencies.libz-sys]
optional = true
version = "1.0.5"

[dependencies.openssl]
optional = true
version = "0.10"

[dev-dependencies]
clap = "2.10.0"
env_logger = "0.3.4"
term = "0.4.4"
time = "0.1.35"

[features]
default = []
permessage-deflate = ["libz-sys", "libc"]
ssl = ["openssl"]
